--- a/index.html
+++ b/index.html
@@ -5,33 +5,88 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./projetCounter/public/css/app.css">
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script> -->
 </head>
 <body>
+    <div class="parentDiv">
+        <div class="value">
+            <div class="box">
+                <img class="logoTwitt" src="./projetCounter/public/src/img/twitter.png" alt="">
+                <div class="counter">12000</div>
+                Twitter Followers
+            </div>
+        </div>
+        <div class="value">
+            <div class="box">
+                <img class="logoYtb" src="./projetCounter/public/src/img/Youtube.png" alt="">
+                <div class="counter">5000</div>
+                YouTube Subscribers
+            </div>
+        </div>
+        <div class="value">
+            <div class="box">
+                <img class="logoFcbk" src="./projetCounter/public/src/img/facebook.png" alt="">
+                <div class="counter">7500</div>
+                Facebook Fans
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- <div class="premier">
+
+    </div>
+    <div id="value">
+
+    </div>
     <div class="divParent">
         <div class="divChild1">
-            <img class="logoTwitt" src="./projetCounter/public/src/img/twitter.png" alt="">
             <h1 class="textDiv1">
-                12000
+                    12000
             </h1>
+            
             <p>
 
             </p>
 
         </div>
         <div class="divChild2">
-            <img class="logoYtb" src="./projetCounter/public/src/img/Youtube.png" alt="">
             <h1 class="textDiv2">
                 5000
             </h1>
         </div>
         
         <div class="divChild3">
-            <img class="logoFcbk" src="./projetCounter/public/src/img/facebook.png" alt="">
             <h1 class="textDiv3">
                 7500
             </h1>
         </div>
-    </div>
+    </div> -->
 
     <script src="./projetCounter/public/js/main.js"></script>
 </body>
