--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         <div class="value">
             <div class="box">
                 <img class="logoYtb" src="./projetCounter/public/src/img/Youtube.png" alt="">
-                <div class="counter">5000</div>
+                <div class="counter2">5000</div>
                 YouTube Subscribers
             </div>
         </div>
         <div class="value">
             <div class="box">
                 <img class="logoFcbk" src="./projetCounter/public/src/img/facebook.png" alt="">
-                <div class="counter">7500</div>
+                <div class="counter3">7500</div>
                 Facebook Fans
             </div>
         </div>
